--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -7,6 +7,8 @@ a {
   text-align: center;
   text-decoration: none;
   color: #000;
+  position: absolute;
+  width: 200px;
 }
 
 .header, .time, .empty {
@@ -31,28 +33,16 @@ a {
 .header {
   color: #A570C1;
   background-color: #000;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .day {
-  margin: 10px auto 0px auto;
+  margin: 50px auto 50px auto;
 }
 .day .row {
   display: flex;
   justify-content: center;
   vertical-align: middle;
-}
-.day .row:nth-of-type(2n) > .subject {
-  background-color: #84F66E;
-}
-.day .row:nth-of-type(2n - 1) > .subject {
-  background-color: #fc9b56;
-}
-.day .row:nth-of-type(2n) > .shadow {
-  background-color: #34F10E;
-}
-.day .row:nth-of-type(2n - 1) > .shadow {
-  background-color: #ea721d;
 }
 
 .time {
@@ -61,48 +51,70 @@ a {
   text-align: center;
 }
 
-.empty {
-  z-index: 2;
-  width: 210px;
+.green {
+  background-color: #34F10E;
+}
+.green::before {
+  background-color: #84F66E;
 }
 
-.shadow {
-  z-index: 1;
-  position: absolute;
-  width: 40px;
-  height: 100px;
-  border-radius: 25px 0px 0px 0px;
-  margin: 10px 0px 10px -165px;
+.orange {
   background-color: #ea721d;
 }
-.shadow-up {
-  background-color: #ea721d !important;
-  height: 50px;
-}
-.shadow-down {
-  height: 50px;
-  background-color: #34F10E !important;
-  border-radius: 0px;
-  margin: 60px 0px 10px -165px;
+.orange::before {
+  background-color: #fc9b56;
 }
 
 .subject {
-  z-index: 2;
-  width: 190px;
   border-radius: 25px 0px 25px 0px;
-  margin: 10px 0px 10px 20px;
+  margin: 10px 0px;
+}
+.subject::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 25px 0px 25px 0px;
+  position: relative;
+  left: 12px;
 }
 .subject-up {
-  background-color: #fc9b56 !important;
+  background-color: #ea721d !important;
   height: 50px;
-  margin: 0px 0px 0px 20px;
-  border-radius: 0px;
   border-radius: 15px 0px 0px 0px;
-  margin-top: 10px;
+  margin: 10px 0px 0px 0px;
+}
+.subject-up::before {
+  background-color: #fc9b56;
+  border-radius: 25px 0px 0px 0px;
 }
 .subject-down {
-  background-color: #84F66E !important;
+  background-color: #34F10E !important;
   height: 50px;
-  margin: 0px 0px 10px 20px;
   border-radius: 0px 0px 15px 0px;
+  margin: 0px 0px 10px 0px;
+}
+.subject-down::before {
+  background-color: #84F66E;
+  border-radius: 0px 0px 15px 0px;
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  .table-t-1, .table-t-3 {
+    visibility: visible;
+    display: block;
+  }
+  .table-t-2, .table-t-4 {
+    display: none;
+    visibility: hidden;
+  }
+}
+@media (min-width: 1200px) {
+  .table-t-1 {
+    visibility: visible;
+    display: block;
+  }
+  .table-t-2, .table-t-3, .table-t-4 {
+    display: none;
+    visibility: hidden;
+  }
 }/*# sourceMappingURL=style.css.map */
