--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -132,6 +132,11 @@ a {
   border-radius: 0px 0px 15px 0px;
 }
 
+@media (min-width: 1200px) {
+  .col-xl-2 {
+    scale: 0.97;
+  }
+}
 @media (min-width: 768px) and (max-width: 1200px) {
   .table-t-1, .table-t-3 {
     visibility: visible;
@@ -147,7 +152,7 @@ a {
     visibility: visible;
     display: block;
   }
-  .table-t-2, .table-t-3, .table-t-4 {
+  .table-t-2, .table-t-3, .table-t-4, .table-t-5 {
     display: none;
     visibility: hidden;
   }
